--- a/css/main.css
+++ b/css/main.css
@@ -130,8 +130,11 @@ header a.menu:hover {
     color: #8dc63f;
 }
 
+#contacto .mi-nombre {
+    padding: 2rem 0;
+}
 #contacto a {
-	 margin: 0 2rem;
+	 margin: 0 1rem;
     padding: 0;
 }
 
