--- a/css/main.css
+++ b/css/main.css
@@ -138,7 +138,7 @@ h2.uk-margin-remove.t-g-azul.julius {
     padding: 2rem 0;
 }
 #contacto a {
-	 margin: 0 1rem;
+	 margin: 0 .5rem;
     padding: 0;
 }
 
