--- a/css/main.css
+++ b/css/main.css
@@ -89,7 +89,9 @@ header #cabezal {
     z-index: 1;
 }
 
-.uk-navbar-nav>li:hover>a, .uk-navbar-nav>li>a.uk-open, .uk-navbar-nav>li>a:focus {
+.uk-navbar-nav>li:hover>a,
+.uk-navbar-nav>li>a.uk-open,
+.uk-navbar-nav>li>a:focus {
     color: #a9164a;
 }
 
@@ -121,18 +123,13 @@ h2.uk-margin-remove.t-g-azul.julius {
     -ms-animation-iteration-count: 3;
 }
 
-#yop img {
-    width: 50%;
-}
-
 #yop p {
     background-color: rgba(255, 255, 255, 0.40);
 }
 
-
-
 #conocimientos,
 #proyectos,
+#diseno,
 #contacto {
     padding-top: 15vh;
     padding-bottom: 6vh;
@@ -151,6 +148,11 @@ h2.uk-margin-remove.t-g-azul.julius {
     color: #8dc63f;
 }
 
+#diseno>.uk-heading-line>:after,
+#diseno>.uk-heading-line>:before {
+    border-bottom: 1px solid #a5a1aa;
+}
+
 #contacto .mi-nombre {
     padding-top: 1rem;
 }
@@ -159,8 +161,12 @@ h2.uk-margin-remove.t-g-azul.julius {
     color: #8dc63f;
 }
 
+.img-responsive{
+    width: 100% !important;
+    height: auto;
+}
+
 @media (min-width:0px) and (max-width:639px) {
-    
     #home {
         padding-top: 3rem;
     }
@@ -173,8 +179,44 @@ h2.uk-margin-remove.t-g-azul.julius {
     div.icono-xs {
         width: 50%;
     }
-    
-    #yop img {
-        width: 90%;
+}
+
+
+/*----***************************************************************    MIN-WIDTH 320    ************----*/
+
+@media only screen and (min-width: 320px) {
+     img#mifoto.uk-border-circle {
+        width: 70%;
+        height: auto;
     }
 }
+
+
+/*----***************************************************************    MIN-WIDTH 480    ************----*/
+
+@media only screen and (min-width: 480px) {}
+
+
+/*----***************************************************************    MIN-WIDTH 768    ************----*/
+
+@media only screen and (min-width: 768px) {
+    img#mifoto.uk-border-circle {
+        width: 35%;
+        
+    }
+}
+
+
+/*----***************************************************************    MIN-WIDTH 992    ************----*/
+
+@media only screen and (min-width: 992px) {}
+
+
+/*----***************************************************************    MIN-WIDTH 1200    ************----*/
+
+@media only screen and (min-width: 1200px) {}
+
+
+/*----***************************************************************    MIN-WIDTH 1550    ************----*/
+
+@media only screen and (min-width: 1550px) {}
